--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#1E3CEB</color>
+    <color name="colorPrimaryDark">#E0E0E0</color>
+    <color name="colorAccent">#1E3CEB</color>
+    <color name="colorPrimaryRipple">#42FFFFFF</color>
+    <color name="colorTransparent">#00FFFFFF</color>
+    <color name="colorButtonBackground">#FFFFFF</color>
 </resources>
