--- a/app/src/main/res/layout/register_step_one_fragment.xml
+++ b/app/src/main/res/layout/register_step_one_fragment.xml
@@ -42,11 +42,10 @@
                 android:id="@+id/edit_text_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_phone_number"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:inputType="phone"
-                android:maxLength="11"
+                android:inputType="number"
+                android:digits="1234567890+-() "
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_please_enter_phone"
