--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:clickable="true"
+            android:focusable="true"
+            app:labelVisibilityMode="labeled"
             app:menu="@menu/bottom_navigation_main"
             app:itemTextColor="@android:color/black"
             app:itemIconTint="@android:color/black"
