--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,25 +9,24 @@
         <item name="colorControlHighlight">@color/colorPrimaryRipple</item>
     </style>
 
-    <style name="TextViewOnMainSearch" parent="Theme.MaterialComponents.Light">
+    <style name="TextViewOnSearchItem" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="TextViewOnMainPopular" parent="Theme.MaterialComponents.Light">
+    <style name="TextViewOnPopularItem" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="PickUpButton" parent="Widget.MaterialComponents.Button">
+    <style name="ButtonPickUp" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@android:color/white</item>
-        <item name="backgroundTint">@color/colorAccent</item>
     </style>
-
+    `
     <style name="EditTextOnSearchItem" parent="ThemeOverlay.MaterialComponents.TextInputEditText">
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">@android:color/black</item>
@@ -49,25 +48,25 @@
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="TextViewSecond" parent="Theme.MaterialComponents.Light">
+    <style name="TextViewInformation" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/colorSecondTest</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="TextViewPhoneNumber" parent="Theme.MaterialComponents.Light">
-        <item name="android:textSize">28sp</item>
-        <item name="android:textColor">@android:color/black</item>
+    <style name="TextViewAdditionalInformation" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorSecondTest</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="ContinueButton" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="ButtonContinue" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="ResendCodeButton" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="ButtonResendCode" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">normal</item>
@@ -83,6 +82,41 @@
 
     <style name="EditTextCode" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="android:textSize">42sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewHeader" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewSmallHeader" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewOnProfileSetting" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewAddNew" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="SwitchSettings" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
