--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -111,6 +111,7 @@
                 android:background="?android:attr/listDivider"
                 android:layout_marginEnd="32dp"
                 android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_cards_label"
