--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,4 +131,25 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="TextViewMoneyOnSearchRoute" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@android:color/holo_orange_dark</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="ChipSmallText">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="ChipBigText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
 </resources>
