--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorButtonBackground">#FFFFFF</color>
     <color name="colorSecondTest">#B2AFB3</color>
-    <color name="colorSmallChipTaxiBackground">#FFA500</color>
-    <color name="colorSmallChipAirplaneBackground">#42AAFF</color>
-    <color name="colorSmallChipTrainBackground">#008000</color>
-    <color name="colorSmallChipShipBackground">#FFFFFF</color>
-    <color name="colorSmallChipFootBackground">#FFFFFF</color>
+    <color name="colorSmallChipTaxiBackground">#F9A825</color>
+    <color name="colorSmallChipAirplaneBackground">#42A5F5</color>
+    <color name="colorSmallChipTrainBackground">#388E3C</color>
+    <color name="colorSmallChipShipBackground">#D81B60</color>
+    <color name="colorSmallChipFootBackground">#6D4C41</color>
     <color name="colorStroke">#000000</color>
 </resources>
