--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
         <TextView
-                android:id="@+id/text_view_popular_item_name"
+                android:id="@+id/text_view_popular_item_place_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -27,6 +27,18 @@
                 android:elevation="1dp"
                 android:translationZ="1dp"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/TextViewOnPopularItem"/>
+
+        <TextView
+                android:id="@+id/text_view_popular_item_place_to"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:elevation="1dp"
+                android:translationZ="1dp"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_popular_item_place_from"
                 app:layout_constraintStart_toStartOf="parent"
                 style="@style/TextViewOnPopularItem"/>
 
