--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -156,8 +156,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/switch_notify_about_discounts"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                style="@style/SwitchSettings"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                style="@style/SwitchSettings"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
