--- a/app/src/main/res/layout/register_step_three_fragment.xml
+++ b/app/src/main/res/layout/register_step_three_fragment.xml
@@ -17,11 +17,13 @@
                 android:text="@string/button_continue"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                style="@style/ButtonContinue" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                style="@style/ButtonContinue"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
