--- a/app/src/main/res/layout/register_step_two_fragment.xml
+++ b/app/src/main/res/layout/register_step_two_fragment.xml
@@ -62,10 +62,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/edit_text_input_code"
                 app:layout_constraintStart_toStartOf="parent"
-                style="@style/TextViewInformation" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                style="@style/TextViewInformation"/>
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_resend_code"
