--- a/app/src/main/res/layout/title_item.xml
+++ b/app/src/main/res/layout/title_item.xml
@@ -13,9 +13,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
-            style="@style/TextViewTitleItem"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@tools:sample/cities"/>
+            tools:text="@tools:sample/cities"
+            style="@style/TextViewTitleItem"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
