--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -14,9 +14,9 @@
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="8dp">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet"/>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_order_routes_and_locations"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 </com.google.android.material.card.MaterialCardView>
