--- a/app/src/main/res/layout/order_route_item.xml
+++ b/app/src/main/res/layout/order_route_item.xml
@@ -1,12 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+    <ImageView
+            android:id="@+id/image_view_top_connection"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_arrow_downward_black_24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    <ImageView
+            android:id="@+id/image_view_route_type"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_local_taxi_blue_24dp"
+            app:layout_constraintTop_toBottomOf="@+id/image_view_top_connection"
+            app:layout_constraintStart_toStartOf="@+id/image_view_top_connection"
+            app:layout_constraintEnd_toEndOf="@+id/image_view_top_connection"/>
+
+    <ImageView
+            android:id="@+id/image_view_bottom_connection"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_arrow_downward_black_24dp"
+            app:layout_constraintTop_toBottomOf="@+id/image_view_route_type"
+            app:layout_constraintStart_toStartOf="@+id/image_view_route_type"
+            app:layout_constraintEnd_toEndOf="@+id/image_view_route_type"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
-            android:text="Route"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:id="@+id/text_view_route_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/image_view_top_connection"
+            app:layout_constraintTop_toTopOf="@+id/image_view_top_connection"
+            tools:text="@tools:sample/lorem"
+            style="@style/TextViewSmallHeader"/>
+
+    <TextView
+            android:id="@+id/text_view_route_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/image_view_route_type"
+            app:layout_constraintTop_toBottomOf="@+id/image_view_top_connection"
+            tools:text="@tools:sample/date/hhmmss"
+            style="@style/TextViewSmallHeader"/>
+
+    <TextView
+            android:id="@+id/text_view_route_cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/image_view_bottom_connection"
+            app:layout_constraintTop_toTopOf="@+id/image_view_bottom_connection"
+            tools:text="@tools:sample/us_zipcodes"
+            style="@style/TextViewMoneyOnSearchRoute"/>
+
+    <TextView
+            android:id="@+id/text_view_is_route_paid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@+id/text_view_route_cost"
+            app:layout_constraintTop_toTopOf="@+id/text_view_route_cost"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_route_cost" tools:text="@tools:sample/lorem"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
