--- a/app/src/main/res/layout/order_location_item.xml
+++ b/app/src/main/res/layout/order_location_item.xml
@@ -23,8 +23,17 @@
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@+id/image_view_location_point"
             app:layout_constraintTop_toTopOf="@+id/image_view_location_point"
-            app:layout_constraintBottom_toBottomOf="@+id/image_view_location_point"
             tools:text="@tools:sample/cities"
             style="@style/TextViewSmallHeader"/>
+
+    <TextView
+            android:id="@+id/text_view_arrival_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_location"
+            app:layout_constraintStart_toStartOf="@+id/text_view_location"
+            tools:text="@tools:sample/date/hhmm"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
