--- a/app/src/main/res/layout/order_route_item.xml
+++ b/app/src/main/res/layout/order_route_item.xml
@@ -8,25 +8,28 @@
 
     <ImageView
             android:id="@+id/image_view_top_connection"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
             android:src="@drawable/ic_arrow_downward_black_24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
             android:id="@+id/image_view_route_type"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/ic_local_taxi_blue_24dp"
             app:layout_constraintTop_toBottomOf="@+id/image_view_top_connection"
             app:layout_constraintStart_toStartOf="@+id/image_view_top_connection"
-            app:layout_constraintEnd_toEndOf="@+id/image_view_top_connection"/>
+            app:layout_constraintEnd_toEndOf="@+id/image_view_top_connection"
+            app:layout_constraintBottom_toTopOf="@+id/image_view_bottom_connection"
+            app:layout_constraintVertical_bias="0.5"/>
 
     <ImageView
             android:id="@+id/image_view_bottom_connection"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/ic_arrow_downward_black_24dp"
             app:layout_constraintTop_toBottomOf="@+id/image_view_route_type"
             app:layout_constraintStart_toStartOf="@+id/image_view_route_type"
@@ -51,7 +54,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/image_view_route_type"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_top_connection"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_route_name"
             tools:text="@tools:sample/date/hhmmss"
             style="@style/TextViewSmallHeader"/>
 
@@ -62,7 +65,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/image_view_bottom_connection"
-            app:layout_constraintTop_toTopOf="@+id/image_view_bottom_connection"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_route_time"
             tools:text="@tools:sample/us_zipcodes"
             style="@style/TextViewMoneyOnSearchRoute"/>
 
@@ -73,6 +76,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@+id/text_view_route_cost"
             app:layout_constraintTop_toTopOf="@+id/text_view_route_cost"
-            app:layout_constraintBottom_toBottomOf="@+id/text_view_route_cost" tools:text="@tools:sample/lorem"/>
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_route_cost"
+            tools:text="@tools:sample/lorem"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
