--- a/app/src/main/res/layout/order_location_item.xml
+++ b/app/src/main/res/layout/order_location_item.xml
@@ -11,8 +11,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
             android:id="@+id/image_view_location_point"
@@ -26,8 +26,10 @@
             android:id="@+id/image_view_connection_bottom"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintTop_toBottomOf="@+id/image_view_location_point"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="@+id/image_view_location_point"
+            app:layout_constraintEnd_toEndOf="@+id/image_view_location_point"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
