--- a/app/src/main/res/layout/order_route_item.xml
+++ b/app/src/main/res/layout/order_route_item.xml
@@ -7,30 +7,30 @@
         android:layout_height="wrap_content">
 
     <ImageView
-            android:id="@+id/image_view_top_connection"
+            android:id="@+id/image_view_connection_top"
             android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_arrow_downward_black_24dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
             android:id="@+id/image_view_route_type"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_local_taxi_blue_24dp"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_top_connection"
-            app:layout_constraintStart_toStartOf="@+id/image_view_top_connection"
-            app:layout_constraintEnd_toEndOf="@+id/image_view_top_connection"
-            app:layout_constraintBottom_toTopOf="@+id/image_view_bottom_connection"
-            app:layout_constraintVertical_bias="0.5"/>
+            app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
+            app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top"/>
 
     <ImageView
             android:id="@+id/image_view_bottom_connection"
             android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_height="0dp"
             android:src="@drawable/ic_arrow_downward_black_24dp"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintTop_toBottomOf="@+id/image_view_route_type"
             app:layout_constraintStart_toStartOf="@+id/image_view_route_type"
             app:layout_constraintEnd_toEndOf="@+id/image_view_route_type"
@@ -41,9 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/image_view_top_connection"
-            app:layout_constraintTop_toTopOf="@+id/image_view_top_connection"
+            app:layout_constraintStart_toEndOf="@+id/image_view_connection_top"
+            app:layout_constraintTop_toTopOf="@+id/image_view_connection_top"
             tools:text="@tools:sample/lorem"
             style="@style/TextViewSmallHeader"/>
 
@@ -52,7 +51,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/image_view_route_type"
             app:layout_constraintTop_toBottomOf="@+id/text_view_route_name"
             tools:text="@tools:sample/date/hhmmss"
@@ -63,7 +61,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/image_view_bottom_connection"
             app:layout_constraintTop_toBottomOf="@+id/text_view_route_time"
             tools:text="@tools:sample/us_zipcodes"
