--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="colorSmallChipShipBackground">#D81B60</color>
     <color name="colorSmallChipFootBackground">#6D4C41</color>
     <color name="colorStroke">#000000</color>
+    <color name="colorConnectionRectangle">#adadad</color>
+    <color name="colorCodePlaceholder">#7b7b7b</color>
 </resources>
